--- a/client/components/style.scss
+++ b/client/components/style.scss
@@ -40,17 +40,60 @@ body {
 }
 
 .container {
+  width: 80%;
+  align-items: center;
   transition: all 500ms ease-in-out;
+  display: block;
+}
+
+.title-bar {
+  font-family: Luminari;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar-content { // nested element is CreateEntry
+  width: 75%;
+  padding: 2rem;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  font: Helvetica;
+  form {
+    input[type=text] {
+      width: 75%;
+      padding: .5rem;
+      margin: 1rem;
+      border-radius: 1rem;
+      box-shadow:0 0 1.5rem .4rem rgba(0,0,0,0.06);
+      background-color: seashell;
+      &::placeholder {
+        font-size: .85rem;
+        color: lightslategrey;
+      }
+    }
+  }
+}
+
+.navbar-search {
+  padding: 1.25rem;
+}
+
+.new-trigger { // CreateEntry modal toggle button
+  color: rgb(26, 141, 84);
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .entrylist-content {
+  align-items: center;
   tr { // set sizing of rows
-    width: 80%;
+    width: 90%;
     height: 2rem;
     align-items: center;
-    justify-content: center;
-    margin: .5rem;
-    padding: .5rem;
+    margin: 1.2rem;
+    padding: 1.2rem;
   }
   th { // "Journal date" category style, not actual journal dates
     align-items: center;
@@ -61,46 +104,18 @@ body {
   }
   td { // date text, journal entry text
     font-size: 1rem;
-    margin: .25rem;
-    padding: .25rem;
+    margin: 2rem;
+    padding: 2rem;
     align-items: center;
   }
-  button {
-    @include editDeleteBtns($theme: LightGray);
-  }
-}
-
-.navbar-content { // nested element is CreateEntry
-  justify-content: center;
-  display: flex;
-  flex-direction: row;
-  font: Helvetica;
-  form {
-    input[type=text] {
-      padding: .5rem;
-      margin: 1rem;
-      border-radius: 1rem;
-      box-shadow:0 0 1.5rem .4rem rgba(0,0,0,0.06);
-      background-color: seashell;
-      &::placeholder {
-        color: darkseagreen;
-      }
-    }
-  }
-  button {
-    font: Helvetica;
-  }
-}
-
-.new-trigger { // CreateEntry modal toggle button
-  color: rgb(26, 141, 84);
-  border: none;
-  outline: none;
-  cursor: pointer;
 }
 
 .edit-trigger { // is this used/needed?
   @include editDeleteBtns(skyblue);
+}
+
+.delete-trigger {
+  @include editDeleteBtns(crimson);
 }
 
 .modal-container {
@@ -136,54 +151,46 @@ body {
 }
 
 /*
-Class structure
+container >
+  navbar-content > new-trigger
+  entrylist-content > edit-trigger
+    modal-container >
+      modal-header
+      modal-body > journal-input
+      modal-footer > modal-button
 
-journal-app
-  .container
-    .navbar-content
-      form, input(text), button
-      CreateEntry
-        .new-trigger
-          button, text
-        EntryModal
-          (as below)
-    .entrylist-content
-      tr
-        th
-      tr
-        td
-          button (maybe give this its own class-styling?)
-          EditEntry
-            .edit-trigger
-              button, text
-            EntryModal
-              .modal-container
-                .modal-header
-                  text
-                .modal-body
-                  .journal-input (form, input=text)
-                .modal-footer
-                  text
-                  .modal-button (2x)
+.container
+  .navbar-content
+    form, input(text), button
+    CreateEntry
+      .new-trigger
+        button, text
+      EntryModal
+        (as below)
+  .entrylist-content
+    tr
+      th
+    tr
+      td
+        text
+        button (maybe give this its own class-styling?)
+        EditEntry
+          .edit-trigger
+            button, text
+          EntryModal
+            .modal-container
+              .modal-header
+                text
+              .modal-body
+                .journal-input (form, input=text)
+              .modal-footer
+                text
+                .modal-button (2x)
 
-
--------- Possibly unnecessary -------
-.modal-content {
-  background: whitesmoke;
-  width: 80%;
-  height: auto;
-  button {
-    @include saveBtns();
-  }
-}
-
-.modal-backdrop {
-  background: rgba(49, 49, 49, 0.7);
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  transition: all 1s;
-}
+                a. Check the container
+                1. Do the NavBar - search field, buttons
+                2. Do the EntryList - layout, buttons, **add classes as needed!!**
+                3. Do the Modal - should be no colliding styles!
 */
 
 
@@ -194,8 +201,4 @@ border
 outline
 
 cursor
-
-justify-content: space-between / center
-align-items: center
-display: flex / block
 */
