--- a/client/components/style.scss
+++ b/client/components/style.scss
@@ -1,23 +1,29 @@
-@mixin saveBtns { // Save/no-save button
-  color: darkgray;
-  border: none;
-  outline: none;
+@mixin modalBtns ($theme: darkgray) {
+  background-color: darkslategrey;
+  color: $theme;
+  display: inline-block;
+  font-size: 1.2rem;
+  border-radius: 1.2rem;
+  border-width: 0rem;
+  padding: .5rem 1.8rem;
   cursor: pointer;
   margin: 2rem;
 }
 
-@mixin editDeleteBtns($theme: rgb(91, 91, 92)) { // entryList edit/delete btns
-  background: #2c2c2c;
+@mixin editDeleteBtns($theme: rgb(91, 91, 92)) {
+  background: #423a3ae3;
   color: $theme;
   display: inline-block;
-  font-size: 1rem;
+  font-size: .9rem;
+  font-weight: 800;
   margin: .25rem .8rem .8rem .25rem;
   padding: .5rem 1.8rem;
-  border-radius: .125rem;
+  border-radius: .8rem;
   cursor: pointer;
+  box-shadow: .3rem .2rem .1rem rgba(80, 74, 74, 0.493);
 }
 
-@mixin formInput { // Create/Edit journal entry input area
+@mixin formInput {
   color: rgb(229, 221, 231);
   font-size: 1rem;
   background: linear-gradient(rgba(97, 149, 202, 0.719), rgba(245, 255, 250, 0.575));
@@ -27,8 +33,11 @@
   border: .25rem rgba(192, 192, 192, 0.719);
   border-radius: 1rem;
   width: 100%;
-  height: 50%;
+  height: 70%;
   resize: vertical;
+  &::placeholder {
+    color: rgba(245, 255, 250, 0.5);
+  }
 }
 
 * {
@@ -56,6 +65,7 @@ body {
   display: flex;
   justify-content: center;
   padding: 1rem;
+  text-shadow: .2rem .2rem #558abb46;
 }
 
 .navbar-content {
@@ -93,11 +103,11 @@ body {
   cursor: pointer;
 }
 
-.new-btn { // CreateEntry modal toggle button
-  background: rgb(26, 141, 84);
-  font-size: 2rem;
+.new-btn {
+  background: rgba(87, 223, 155, 0.644);
+  font-size: 1.3rem;
   margin: .2rem;
-  padding: .5rem;
+  padding: .5rem 1.8rem;
   margin-left: auto;
   margin-right: auto;
   text-rendering: auto;
@@ -107,12 +117,15 @@ body {
   height: 100%;
   border-radius: .4rem;
   cursor: pointer;
+  box-shadow: 10px 5px 5px rgba(51, 31, 231, 0.582);
 }
 
 .entrylist-content {
   display: flex;
   justify-content: center;
+  padding: 2rem .5rem;
   td {
+    font-family: Tahoma;
     vertical-align: top;
     text-align: start;
     padding: .5rem .2rem;
@@ -126,7 +139,7 @@ body {
 }
 
 .journal-text {
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin: 2rem;
   padding: 2rem;
   align-items: center;
@@ -159,7 +172,7 @@ body {
   padding-top: 3rem;
 }
 
-.modal-body { // form, input text, placeholder
+.modal-body {
   margin-right: auto;
   margin-left: auto;
   display: flex;
@@ -173,50 +186,17 @@ body {
   }
 }
 
-.modal-footer { // static text, 2 buttons (same params)
-  margin-bottom: 1rem;
-  border: 1rem;
+.modal-footer {
+  padding: 1rem;
   display: flex;
   justify-content: center;
-  button {
-    @include saveBtns;
-  }
+  resize: vertical;
 }
 
-/*
-container >
-  navbar-content > new-trigger
-  entrylist-content > edit-trigger
-    modal-container >
-      modal-header
-      modal-body > journal-input
-      modal-footer > modal-button
+.modal-save {
+  @include modalBtns(chartreuse);
+}
 
-.container
-  .navbar-content
-    form, input(text), button
-    CreateEntry
-      .new-trigger
-        button, text
-      EntryModal
-        (as below)
-  .entrylist-content
-    tr
-      th
-    tr
-      td
-        text
-        button (maybe give this its own class-styling?)
-        EditEntry
-          .edit-trigger
-            button, text
-          EntryModal
-            .modal-container
-              .modal-header
-                text
-              .modal-body
-                .journal-input (form, input=text)
-              .modal-footer
-                text
-                .modal-button (2x)
-*/
+.modal-delete {
+  @include modalBtns(crimson);
+}
